--- a/scripts/processing_R-formatted-data.Rmd
+++ b/scripts/processing_R-formatted-data.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(readxl)
 library(tidyverse)
 
-source("00-paths.R")
+# source("00-paths.R")
 ```
 
 
@@ -28,14 +28,42 @@ source("00-paths.R")
 
 ```
 
+Read in all tumor size measurements
+ 
 ```{r AP Data Read Test Code}
-tsize.files <- list.files(file.path(paths$git, 'data','tumor-size'), pattern = "AOT", full.names = T)
+tsize.files <- list.files("../data/tumor-size", 
+                          pattern = "AOT", 
+                          full.names = TRUE,
+                          recursive = TRUE)
+
+tsize.files
+```
+Filter any conflicting copy files, which have an appended computer ID starting with "CANCER".
+
+```{r}
+tsize.files <- 
+  tsize.files[!grepl("-CANCER-", tsize.files)]
+
+tsize.files
+```
+Read in files to list
+
+```{r}
+
+tsize.raw <- lapply(tsize.files, read_xlsx)
+names(tsize.raw) <- tsize.files
+```
+
+
+Read in a separate table of the injection dates for each experiment, to be used as the zero time point. 
+
+```{r}
 # tsize.files <- c(tsize.files[3:10], tsize.files[1])
-tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
+# tsize.file.2 <- unlist(lapply(tsize.files, function(x) list.files(x, pattern = "_size")))
+# 
+# tsize.raw <- lapply(1:13, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
 
-tsize.raw <- lapply(1:13, function(x) read_excel(file.path(tsize.files[x], tsize.file.2[x])))
-
-inject.dates <- read_excel(file.path(paths$box, "data", "mimic_injection_dates.xlsx"))
+inject.dates <- read_xlsx("../data/mimic_injection_dates.xlsx")
 
 ```
 
@@ -45,7 +73,9 @@ inject.dates <- read_excel(file.path(paths$box, "data", "mimic_injection_dates.x
 calcTumorVol <- function(tmp, idate){
   tmp %>%
     mutate(tail.number = as.character(tail.number)) %>%
-    mutate(tumor.volume = (`tumor.length.(mm)` * (`tumor.width.(mm)`^2)) / 2,
+    mutate(tumor.length.mm = as.numeric(`tumor.length.(mm)`),
+           tumor.width.mm = as.numeric(`tumor.width.(mm)`)) %>%
+    mutate(tumor.volume = (tumor.length.mm * (tumor.width.mm^2)) / 2,
            tumor.volume = dplyr::if_else(is.na(tumor.volume),
                                          true = 0,
                                          false = tumor.volume)) %>%
@@ -63,8 +93,11 @@ calcTumorVol <- function(tmp, idate){
 zero.vals <- c("n/a", "N/A")
 
 mim1 <- tsize.raw[[1]] %>%
-  mutate(`tumor.length.(mm)` = ifelse(is.na(`tumor.length.(mm)`), 0, `tumor.length.(mm)`),
-          `tumor.width.(mm)` = ifelse(is.na(`tumor.width.(mm)`), 0, `tumor.width.(mm)`)) %>%
+  mutate(`tumor.length.(mm)` = ifelse(is.na(`tumor.length.(mm)`), 
+                                      0, 
+                                      `tumor.length.(mm)`),
+          `tumor.width.(mm)` = ifelse(is.na(`tumor.width.(mm)`), 
+                                      0, `tumor.width.(mm)`)) %>%
   mutate(
     # condition = dplyr::if_else(grepl("v3", microbiome.sample),
     #                                true = "mimic1.pre-DI",
@@ -164,9 +197,14 @@ mim8 <- tsize.raw[[8]] %>%
   mutate(unique.mouse.id = paste(tail.number, treatment, microbiome.sample, sep = "_"),
          experiment = "mimic8") %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
+```
 
+
+```{r}
+# I don't see mimic 9 in the input file -- skipping for now
 mim9 <- tsize.raw[[9]] %>%
   drop_na(microbiome.sample) %>%
+  filter(!grepl("n/a", microbiome.sample)) %>%
   mutate(Treatment = ifelse(cage %in% c(1,3), "Anti-PD1", "IgG"),
          microbiome.sample = gsub("V", "v", microbiome.sample),
          treatment.group = paste(Treatment,microbiome.sample, sep = " x "),
@@ -210,7 +248,7 @@ mim4 <- mim4.fixdate %>%
 ```
 
 ```{r AP mimic cleanup}
-mim10 <- tsize.raw[[10]] %>%
+mim10 <- tsize.raw[[grep("mimic10", names(tsize.raw))]] %>%
   drop_na(`tumor.number`) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
@@ -227,7 +265,7 @@ mim10 <- tsize.raw[[10]] %>%
 # mouse 3 cage 4 died and has incomplete dataset
   filter(unique.mouse.id != "3 x 4_IgG_HONC-60 68v2")
 
-mim11 <- tsize.raw[[11]] %>%
+mim11 <- tsize.raw[[grep("mimic11", names(tsize.raw))]] %>%
   drop_na(tumor.number) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
@@ -241,7 +279,7 @@ mim11 <- tsize.raw[[11]] %>%
          experiment = "mimic11") %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ") 
 
-mim12 <- tsize.raw[[12]] %>%
+mim12 <- tsize.raw[[grep("mimic12", names(tsize.raw))]] %>%
    drop_na(tumor.number) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
@@ -256,7 +294,7 @@ mim12 <- tsize.raw[[12]] %>%
          experiment = "mimic12") %>%
   separate(tail.number, into = c("tail.number", "cage"), sep = " x ")
 
-mim13 <- tsize.raw[[13]] %>%
+mim13 <- tsize.raw[[grep("mimic13", names(tsize.raw))]] %>%
   drop_na(tumor.number) %>%
   mutate(`tumor.length.(mm)` = as.numeric(`tumor.length.(mm)`),
          `tumor.width.(mm)` = as.numeric(`tumor.width.(mm)`),
@@ -274,6 +312,20 @@ mim13 <- tsize.raw[[13]] %>%
 
 ```
 
+```{r}
+mim16 <- 
+  tsize.raw[[grep("mimic16", names(tsize.raw))]] %>%
+  drop_na(microbiome.sample) %>%
+  filter(!grepl("na", `tumor.width.(mm)`)) %>% 
+  calcTumorVol(., as.POSIXct("2023-02-01")) 
+  
+
+# 
+#   mutate(Treatment = ifelse(cage %in% c(1,2), "Anti-PD1","IgG"),
+#          treatment.group = paste(Treatment, microbiome.sample, sep = " x "),
+#          tail.number = paste(tail.number, cage, sep = " x ")) %>% 
+```
+
 
 
 # Combine results
@@ -287,15 +339,20 @@ mimic.cleaned <- mim1 %>%
   bind_rows(mim6) %>%
   bind_rows(mim7) %>%
   bind_rows(mim8) %>%
-  bind_rows(mim9) %>%
+  # bind_rows(mim9) %>% # mimic9 is missing from the input files
   bind_rows(mim10) %>%
   bind_rows(mim11) %>%
   bind_rows(mim12) %>%
-  bind_rows(mim13)
+  bind_rows(mim13) %>%
+  bind_rows(mim16)
 ```
 
 # Save
 
 ```{r}
-write.csv(mimic.cleaned, "../data/2022-08-11_tumor-size_R-formatted.csv", row.names = F)
+write.csv(x = mimic.cleaned, 
+          file = paste0("../data/", 
+                        format(Sys.Date(), "%F"),
+                        "_tumor-size_R-formatted.csv"),
+          row.names = F)
 ```
